--- a/pom.xml
+++ b/pom.xml
@@ -214,7 +214,7 @@
 			<!-- 本地开发环境 -->
 			<id>development</id>
 			<properties>
-				<profiles.active>dev</profiles.active>
+				<profiles.active>development</profiles.active>
 			</properties>
 			<activation>
 				<activeByDefault>true</activeByDefault>
